--- a/static/style.css
+++ b/static/style.css
@@ -42,3 +42,18 @@
     border-radius: 5px;
     font-size: 15px;
 }
+
+#flash-messages{
+    border: 2px solid rgba(255,0,0,0.5);
+    margin: 20px;
+    background-color: rgba(255,0,0,0.3);
+    border-radius: 20px;
+    padding: 2px;
+}
+
+#flash-messages p{
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 18px;
+}
