--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,15 @@
     {% endblock %}
 </head>
 <body>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div id="flash-messages">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endwith %}
     <div id ="content">{% block content %}{% endblock %}</div>
 </body>
 </html>
