--- a/templates/completedsurvey.html
+++ b/templates/completedsurvey.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div id="thank-you-page">
-        <h1>Thank You For Completing This Survey!</h1>
+        <h1>Thank You For Completing The {{survey}} Survey!</h1>
         <form action="/">
             <button type="submit">Go Home</button>
         </form>
